--- a/AutoMall/ViewControllers/Upkeep/AutoCheckVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckVC.xib
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,7 +18,137 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vqQ-kS-4au">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7FG-vy-3gN">
+                            <rect key="frame" x="8" y="7" width="60" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="HZh-aO-RTl"/>
+                                <constraint firstAttribute="width" constant="60" id="hNz-Zh-OV1"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T7A-KD-kxA">
+                            <rect key="frame" x="13" y="42" width="50" height="2"/>
+                            <color key="backgroundColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="1bd-s8-vMX"/>
+                                <constraint firstAttribute="height" constant="2" id="5KT-be-26W"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M3m-2u-EDL">
+                            <rect key="frame" x="91" y="42" width="50" height="2"/>
+                            <color key="backgroundColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="2" id="3tq-xi-dQk"/>
+                                <constraint firstAttribute="width" constant="50" id="VGA-IX-dex"/>
+                            </constraints>
+                        </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aUu-Qd-m9O">
+                            <rect key="frame" x="157.5" y="7" width="60" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="T1o-jh-oDM"/>
+                                <constraint firstAttribute="height" constant="30" id="wfs-u5-va9"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X9f-YX-7Og">
+                            <rect key="frame" x="162.5" y="42" width="50" height="2"/>
+                            <color key="backgroundColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="JcK-Lx-aNd"/>
+                                <constraint firstAttribute="height" constant="2" id="aIN-Qx-FNk"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Egk-i8-Q9L">
+                            <rect key="frame" x="235" y="42" width="50" height="2"/>
+                            <color key="backgroundColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="BQ0-vC-TYn"/>
+                                <constraint firstAttribute="height" constant="2" id="MsI-g8-teW"/>
+                            </constraints>
+                        </view>
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WOq-6V-3kR">
+                            <rect key="frame" x="220" y="7" width="60" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="2Ul-Cu-5zD"/>
+                                <constraint firstAttribute="height" constant="30" id="eyG-Zj-3e4"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d9v-S5-Nqb">
+                            <rect key="frame" x="307" y="7" width="60" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="wgy-BI-5MX"/>
+                                <constraint firstAttribute="height" constant="30" id="zxg-oK-XWf"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ILU-qL-Sfa">
+                            <rect key="frame" x="312" y="42" width="50" height="2"/>
+                            <color key="backgroundColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="37m-m2-yiJ"/>
+                                <constraint firstAttribute="height" constant="2" id="yXJ-go-gjH"/>
+                            </constraints>
+                        </view>
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7a1-CO-ifd">
+                            <rect key="frame" x="86" y="7" width="60" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="Xon-GR-oyg"/>
+                                <constraint firstAttribute="width" constant="60" id="jH8-6w-1vd"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="7FG-vy-3gN" firstAttribute="leading" secondItem="vqQ-kS-4au" secondAttribute="leading" constant="8" id="2yp-gH-zPH"/>
+                        <constraint firstItem="X9f-YX-7Og" firstAttribute="centerX" secondItem="aUu-Qd-m9O" secondAttribute="centerX" id="3NE-UU-nNX"/>
+                        <constraint firstAttribute="bottom" secondItem="ILU-qL-Sfa" secondAttribute="bottom" id="4Cc-cO-ujp"/>
+                        <constraint firstAttribute="bottom" secondItem="T7A-KD-kxA" secondAttribute="bottom" id="5dv-q9-8A2"/>
+                        <constraint firstAttribute="trailing" secondItem="d9v-S5-Nqb" secondAttribute="trailing" constant="8" id="6BO-u8-6fx"/>
+                        <constraint firstItem="aUu-Qd-m9O" firstAttribute="centerX" secondItem="vqQ-kS-4au" secondAttribute="centerX" id="6nY-f8-WcB"/>
+                        <constraint firstItem="WOq-6V-3kR" firstAttribute="centerY" secondItem="7FG-vy-3gN" secondAttribute="centerY" id="GVo-M1-npa"/>
+                        <constraint firstAttribute="bottom" secondItem="M3m-2u-EDL" secondAttribute="bottom" id="JWX-ks-fwa"/>
+                        <constraint firstItem="d9v-S5-Nqb" firstAttribute="centerY" secondItem="7FG-vy-3gN" secondAttribute="centerY" id="Jhy-tc-PKR"/>
+                        <constraint firstAttribute="bottom" secondItem="Egk-i8-Q9L" secondAttribute="bottom" id="LnE-11-fso"/>
+                        <constraint firstItem="aUu-Qd-m9O" firstAttribute="centerY" secondItem="7FG-vy-3gN" secondAttribute="centerY" id="UM8-y5-awb"/>
+                        <constraint firstAttribute="height" constant="44" id="Ugs-l6-I5m"/>
+                        <constraint firstItem="T7A-KD-kxA" firstAttribute="centerX" secondItem="7FG-vy-3gN" secondAttribute="centerX" id="dvP-3T-ykl"/>
+                        <constraint firstItem="Egk-i8-Q9L" firstAttribute="centerX" secondItem="WOq-6V-3kR" secondAttribute="centerX" id="hbO-fr-bes"/>
+                        <constraint firstItem="M3m-2u-EDL" firstAttribute="centerX" secondItem="7a1-CO-ifd" secondAttribute="centerX" id="n2B-9J-wEO"/>
+                        <constraint firstItem="7a1-CO-ifd" firstAttribute="centerY" secondItem="7FG-vy-3gN" secondAttribute="centerY" id="pHb-cZ-aVA"/>
+                        <constraint firstItem="7FG-vy-3gN" firstAttribute="centerY" secondItem="vqQ-kS-4au" secondAttribute="centerY" id="tAj-kW-a1d"/>
+                        <constraint firstAttribute="bottom" secondItem="X9f-YX-7Og" secondAttribute="bottom" id="uKl-Ks-6ka"/>
+                        <constraint firstItem="ILU-qL-Sfa" firstAttribute="centerX" secondItem="d9v-S5-Nqb" secondAttribute="centerX" id="we4-Ox-a2I"/>
+                    </constraints>
+                </view>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="vqQ-kS-4au" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="JA6-Wr-k2M"/>
+                <constraint firstItem="vqQ-kS-4au" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Udr-Mh-kS5"/>
+                <constraint firstAttribute="trailing" secondItem="vqQ-kS-4au" secondAttribute="trailing" id="pot-o2-8W3"/>
+            </constraints>
+            <point key="canvasLocation" x="-19" y="56"/>
         </view>
     </objects>
 </document>
