--- a/AutoMall/ViewControllers/Upkeep/CarInfoSearchVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/CarInfoSearchVC.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,14 +22,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="w2g-70-dtX">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="9Kv-83-0by"/>
                     </constraints>
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Kib-pp-mgl">
-                    <rect key="frame" x="0.0" y="44" width="375" height="623"/>
+                    <rect key="frame" x="0.0" y="108" width="375" height="559"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="vC4-mq-hPK"/>
@@ -45,7 +45,7 @@
                 <constraint firstItem="w2g-70-dtX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Rnr-9v-KSF"/>
                 <constraint firstAttribute="bottom" secondItem="Kib-pp-mgl" secondAttribute="bottom" id="jmq-O0-e5k"/>
                 <constraint firstItem="Kib-pp-mgl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="nhv-pe-3vl"/>
-                <constraint firstItem="w2g-70-dtX" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="noo-lr-Dzl"/>
+                <constraint firstItem="w2g-70-dtX" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="noo-lr-Dzl"/>
             </constraints>
             <point key="canvasLocation" x="-245" y="62"/>
         </view>
